# FFmpegAndroid

app/: build.gradle
app/src/androidTest/java/com/luoj/android/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg-api.cpp  ffmpeg-api.h
app/src/main/java/com/luoj/android/ffmpeg/: FFmpegAPI.java  FFmpegPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/luoj/android/ffmpeg/: ExampleUnitTest.java
